<resources>
    <string name="app_name">Taste of Dubai</string>
    <string name="action_settings">Settings</string>
    <string name="internet_connection_lost">Connection Lost!!</string>
    <string name="tap_to_retry">Tap to retry</string>

    <string name="taste_of_abu_dhabi_heading">#TASTEOFDUBAI</string>
    <string name="taste_of_dubai_menu">Taste of Dubai Menu</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="restaurants_description">Taste involves 20 of the city\’s best restaurants all ranging in taste, style and atmosphere. Whether you\’re looking for a family meal or a romantic night out with that special someone, we\’re confident you\’l find a restaurant for your occasion.</string>
    <string name="map">MAP</string>
    <string name="venue_map">VENUE MAP</string>
    <string name="schedule">SCHEDULE</string>
    <string name="entertainment_schedule">ENTERTAINMENT SCHEDULE</string>
    <string name="chefs">CHEFS</string>
    <string name="chefs_description">Taste of Dubai boasts some of the country\'s finest chefs on stage at the Chef\'s Theatre and Cookery School. They\'ll help refine that ambitious menu and prepare you for the ultimate season of extravagance. Check up our line up for 2015</string>
    <string name="time">Time</string>
    <string name="act">Act</string>
</resources>
