<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="75"
            android:scaleType="fitXY"
            android:src="@drawable/home_banner" />

        <TextView
            android:id="@+id/logoLbl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_weight="25"
            android:background="@drawable/greybar"
            android:gravity="center"
            android:text="@string/taste_of_abu_dhabi_heading"
            android:textColor="@color/colorOrangeTheme"
            android:textSize="15sp">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/orange_bar_height"
            android:layout_alignParentBottom="true"
            android:background="@color/colorOrangeTheme">

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical"
        android:padding="@dimen/menu_layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/divider"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/restaurantsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/resturant"
                        android:gravity="center_horizontal"
                        android:text="@string/restaurants"
                        android:textColor="@color/colorOrangeTheme" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/venueMapBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/map"
                        android:gravity="center"
                        android:text="@string/venue_map"
                        android:textColor="@color/colorOrangeTheme" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/scheduleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/calander"
                        android:gravity="center_horizontal"
                        android:text="@string/schedule"
                        android:textColor="@color/colorOrangeTheme" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/chefsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/chef"
                        android:gravity="center_horizontal"
                        android:text="@string/chefs"
                        android:textColor="@color/colorOrangeTheme" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
